--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,10 +3,22 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+        {% block stylesheets %}
+        
+        {# Hier moet dus iets van stylesheets komen --> invoegen van css files? --> check dit nog eens bij Verrukkuluk! #}
+        
+        {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+        {% block body %}
+        
+        {# Basic body features  #}
+
+        {% endblock %}
+        {% block javascripts %}
+        
+        {# JS referenties? #}
+
+        {% endblock %}
     </body>
 </html>
