--- a/templates/vacancy/showvacancy.html.twig
+++ b/templates/vacancy/showvacancy.html.twig
@@ -1,20 +1,59 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello VacancyController!{% endblock %}
+{% block title %}{{ vacancy.function }}{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/glenn/VacIT/src/Controller/VacancyController.php'|file_link(0) }}">src/Controller/VacancyController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/glenn/VacIT/templates/vacancy/index.html.twig'|file_link(0) }}">templates/vacancy/index.html.twig</a></code></li>
-    </ul>
-</div>
+        <div class="grid-container">
+            <div class="grid-x grid-padding-x">
+                <div class="small-3 medium-2 large-2">
+                    {{ vacancy.platform.iconurl }}
+                </div>
+                <div class="small-9 medium-10 large-10">
+                    <span><h4>{{ vacancy.vacancydate }}</h4></span>
+                    <span><h1>{{ vacancy.function }} voor {{ vacancy.user.companyname }}</h1></span>
+                    <span><h3>Niveau: {{ vacancy.level }}{{ vacancy.location }}</h3></span> 
+                </div>
+            </div>
+            <div class="grid-x grid-padding-x">
+                <div class="small-3 medium-2 large-2">
+                    {{ vacancy.user.profilepictureurl }}
+                </div>
+                <div class="small-9 medium-10 large-10">
+                    <span><h5>{{ vacancy.jobdescription }}</h5></span>
+                </div>
+            </div>
+            {# <div class="grid-x grid-padding-x">
+                <div class="small-3 medium-2 large-2">
+                    {# <span><h1><strong>PIJL</strong></h1></span> #}
+                {# </div>
+                <div class="small-9 medium-10 large-10">
+                    <span><h3><strong>SOLLICITEER DIRECT!</strong></h3></span>
+                <div> #}
+            {# <div class="grid-x grid-padding-x">
+                <div class="small-3 medium-2 large-2">
+                </div>
+                <div class="small-9 medium-10 large-10">
+                    <span><h4>MEER VACATURES VAN {{ vacancy.user.companyname }}</h4></span>
+                    <table id="table_id" class="display">
+                        <thead>
+                            <tr>
+                                <th>Date</th>
+                                <th>Vacancy</th>
+                                <th>Level</th>
+                            </tr>
+                        </thead> 
+                        <tbody>
+                            {% for vacancy in vacancies %}
+                                <tr>
+                                    <td>{{ vacancy.vacancydate }}</td>
+                                    <td>{{ vacancy.function }}</td>
+                                    <td>{{ vacancy.level }}</td>
+                                </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            </div> #}
+    </div>
+   
 {% endblock %}
