2020-09-01 Working on Login - Registration Layout

--- a/public/assets/css/stylesheetBBN.css
+++ b/public/assets/css/stylesheetBBN.css
@@ -4,8 +4,8 @@
 
 @font-face {
     font-family: 'bebas_neueregular';
-    src: url('assets/fonts/BebasNeue/bebasneue-webfont.woff2') format('woff2');
-    src: url('assets/fonts/BebasNeue/bebasneue-webfont.woff') format('woff');
+    src: url('bebasneue-webfont.woff2') format('woff2');
+    src: url('bebasneue-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
