--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,8 +6,8 @@
         {% block stylesheets %}
         
         <link rel="stylesheet" href="{{ asset('assets/css/foundation.css')}}">
-        <link rel="stylesheet" href="{{ asset('assets/fonts/BebasNeue/stylesheet.css')}}">
-        <link rel="stylesheet" href="{{ asset('assets/fonts/RobotoCondensed/stylesheet.css')}}">
+        <link rel="stylesheet" href="{{ asset('assets/css/stylesheetBBN.css')}}">
+        <link rel="stylesheet" href="{{ asset('assets/css/stylesheetRC.css')}}">
         <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/zf/dt-1.10.21/datatables.min.css"/>                
         <link rel="stylesheet" href="{{ asset('assets/css/main.css')}}">
         
