--- a/templates/global/footer.html.twig
+++ b/templates/global/footer.html.twig
@@ -13,8 +13,8 @@
         <div class="grid-container">
             <div class="grid-x">
                     <div class="small-6 medium-6 large-6 footer-text">
-                        <span><strong>ADRES</strong></span><br>
-                        <span>Poststraat 2B</span><br>6135 KR, Sittard
+                        <span><strong>ADRES</strong></span></br>
+                        <span>Poststraat 2B<br>6135 KR, Sittard</span>
                         <br>
                         <br>
                         <span><strong>PRIVACY</span></strong><br>
