--- a/templates/homepage/alternative/index.html.twig
+++ b/templates/homepage/alternative/index.html.twig
@@ -7,11 +7,11 @@
     <table id="table_id" class="display">
         <thead>
             <tr>
-                <th>Date</th>
-                <th>Company</th>
-                <th>Function</th>
-                <th>Level</th>
-                <th>Location</th>
+                <th>Datum</th>
+                <th>Bedrijf</th>
+                <th>Functie</th>
+                <th>Niveau</th>
+                <th>Locatie</th>
                 <th>Platform</th>
             </tr>
         </thead>
