--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -5,13 +5,13 @@
     color: white;
     height: 200px;
     width: 100%;
-    font-family: 'BebaseNeue';
+    font-family: 'bebas_neueregular';
     padding: 0px;
     overflow: hidden;
     position: relative;
 }
 
-.logo{
+.headerlogo{
     background-color: #333333;
     width: 50%;
     height: auto;
@@ -60,18 +60,27 @@
     width: 100%;
 }
 
+.inputstyle input{
+    width: 500px;
+    font-family: 'robotocondensed';
+    box-shadow: none;
+    border: none;
+    border-bottom : 2px solid #F15A24;
+}
+
 
 /* FOOTER FEATURES */
 
 .footer{
+    position: relative;
     background-color: #333333;
     color: white;
     height: 250px;
     width: 100%;
-    font-family: BebaseNeue;
+    font-family: 'bebas_neueregular';
     padding: 0px;
     overflow: hidden;
-    position: relative;
+   
 }
 
 .logo-footer{
