--- a/templates/global/header.html.twig
+++ b/templates/global/header.html.twig
@@ -3,7 +3,7 @@
         <div class="grid-container">
             <div class="grid-x">
                 <div class="small-6 medium-6 large-6">
-                    <a href="/"><img src="{{ asset('assets/logo/vacit-logo-white.png')}}" class="logo"></a>
+                    <a href="/"><img src="{{ asset('assets/logo/vacit-logo-white.png')}}" class="headerlogo"></a>
                 </div>
                 <div class="small-6 medium-6 large-6">
                     <button class="menu-icon" type="button" data-toggle=""></button>
