2020-09-03 Vacancy Page - First Version

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{% block title %}{% endblock %}</title>
         {% block stylesheets %}
         
@@ -9,6 +10,7 @@
         <link rel="stylesheet" href="{{ asset('assets/css/all.css')}}">
         <link rel="stylesheet" href="{{ asset('assets/css/stylesheetBBN.css')}}">
         <link rel="stylesheet" href="{{ asset('assets/css/stylesheetRC.css')}}">
+        <link rel="stylesheet" href="{{ asset('assets/css/richtext.min.css')}}">
         <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/zf/dt-1.10.21/datatables.min.css"/>                
         <link rel="stylesheet" href="{{ asset('assets/css/main.css')}}">
         <link rel="stylesheet" href="{{ asset('assets/css/loginregistration.css')}}">
@@ -20,6 +22,7 @@
         <script src="{{ asset('assets/js/foundation.js')}}"></script>
         <script src="{{ asset('assets/js/vendor.js')}}"></script>
         <script src="{{ asset('assets/js/all.js')}}"></script>
+        <script src="{{ asset('assets/js/jquery.richtext.min.js')}}"></script>
         <script type="text/javascript" src="https://cdn.datatables.net/v/zf/dt-1.10.21/datatables.min.js"></script>
         <script>$(document).ready(function(){$('#table_id').DataTable();});</script>
 
