--- a/public/assets/css/vacancypage.css
+++ b/public/assets/css/vacancypage.css
@@ -1,4 +1,74 @@
-.invert{
-    filter: invert(100%);
+.leveltitle{
+    font-family: 'bebas_neueregular';
+    font-size: 24px;
+    color: #F15A24; 
 }
 
+.levelstyle{
+    font-family: 'bebas_neueregular';
+    font-size: 24px;
+    color: black;
+}
+
+.locationstyle{
+    font-family: 'bebas_neueregular';
+    font-size: 24px;
+    color: black;
+    padding-left: 5px;
+}
+
+.descriptionstyle{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16;
+}
+
+.right{
+    float: right;
+    margin-right: 10px;
+    
+}
+
+.vacanciesstyle{
+    font-family: 'bebas_neueregular';
+    font-size: 24px;
+    color: black;
+}
+
+.company{
+    font-family: 'bebas_neueregular';
+    font-size: 24px;
+    color: #F15A24; 
+}
+
+.vacanciestable{
+    color: black;
+    border: transparent none; 
+}
+
+.vacanciestable thead tr{
+    font-family: 'bebas_neueregular';
+    font-size: 20px;
+    background-color: white;
+    border-left: solid white 1px;
+    border-right: solid white 1px;
+    border-top: solid white 1px;
+}
+
+.vacanciestable tbody tr{
+    background-color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 13px;
+    font-weight: bold;
+    border-bottom: solid #333333 2px;
+    border-left: solid white 1px;
+    border-right: solid white 1px;
+    border-top: solid white 1px;
+}
+
+.vacanciestable tbody td:nth-of-type(odd){
+    color: grey;
+}
+
+.vacanciestable tbody td:nth-of-type(even){
+    color: #F15A24;
+}
