--- a/templates/application/myapplicants.html.twig
+++ b/templates/application/myapplicants.html.twig
@@ -1,20 +1,54 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ApplicationController!{% endblock %}
+{% block title %}My Applicants{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <div class="grid-container grid-container-padding">
+        <div class="grid-x grid-padding-x">
+            <div class="small-2 medium-2 large-2">
+                <br>
+                    <img src="{{ user.profilepictureurl }}">
+                </br>
+            </div>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+            <div class="small-1 medium-1 large-1">
+            </div>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/glenn/VacIT/src/Controller/ApplicationController.php'|file_link(0) }}">src/Controller/ApplicationController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/glenn/VacIT/templates/application/index.html.twig'|file_link(0) }}">templates/application/index.html.twig</a></code></li>
-    </ul>
-</div>
+            <div class="small-9 medium-9 large-9">
+                <br>
+                <div class="titlestyle">Mijn Sollicitaties</div>
+                </br>
+                    <table id="table_id" class="myapplicationstable">
+                        <thead>
+                            <tr>
+                                <th>Datum</th>
+                                <th>Vacature</th>
+                                <th>Sollicitant</th>
+                                <th>Uitnodigen</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for applicant in applicants|sort((a, b) => a.vacancy.function <=> b.vacancy.function) %}
+                            <tr>
+                                <td>{{ applicant.applicationdate }}</td>
+                                <td>{{ applicant.vacancy.function }}</td>
+                                <td>{{ applicant.user.lastname}}, {{ applicant.user.firstname}}</td>
+                                <td>{% if applicant.invited == 0 %}
+                                <a type="text" class="btn btn-success" <a href="application/invitation/{{applicant.id}}">
+                                Invite 
+
+                                {% else %}
+                                <a type="text" class="btn btn-success" <a href="application/invitation/{{applicant.id}}">
+                                Uninvite
+                                {% endif %}</td>
+
+                            
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            </div>                           
+        </div>
+    </div>
 {% endblock %}
