--- a/templates/vacancy/showvacancy.html.twig
+++ b/templates/vacancy/showvacancy.html.twig
@@ -18,13 +18,13 @@
             </div>
 
             <div class="small-9 medium-9 large-9">
-                <br><span><h6>{{ vacancy.vacancydate }}</h6></span>
+                <br><span class="datestyle">{{ vacancy.vacancydate }}</span>
                 <span><h2>{{ vacancy.function }} voor {{ vacancy.user.companyname }}</h2></span>
 
                 <div class="grid-x">
                     <div class="small-10 medium-10 large-10">
                         <div>
-                            <span class='leveltitle'>Niveau: </span><span class='levelstyle'>{{ vacancy.level }}</span>
+                            <span class="leveltitle">Niveau: </span><span class='levelstyle'>{{ vacancy.level }}</span>
                         </div>
                     </div>
                     <div class="small-2 medium-2 large-2">
@@ -35,8 +35,8 @@
                 </div>
                 
                 <br>
-                <div class="descriptionstyle">
-                    {{ vacancy.jobdescription }} 
+                <div>
+                    <font size="2">{{ vacancy.jobdescription }}</font> 
                     {# <textarea class="content" name="example"></textarea> #}
                 </div>
             </div>
@@ -47,15 +47,15 @@
             </div>
 
             <div class="small-1 medium-1 large-1 ">
-                <button type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" class="btn btn-succes; right" style="font-size: 3rem; color: #F15A24; "><i class="fas fa-arrow-right"></i></button>
+                <br><button type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" class="btn btn-succes; right" style="font-size: 3rem; color: #F15A24; "><i class="fas fa-arrow-right"></i></button>
             </div>
 
             <div class="small-9 medium-9 large-9">
                 {% if is_granted('ROLE_CANDIDATE') %}
-                    <button type="submit" id="_submit" name="_submit" class="btn btn-succes" style="font-family: bebas_neueregular; font-size: 3rem; color: #F15A24">SOLLICITEER DIRECT</i></button>
+                    <br><button type="submit" id="_submit" name="_submit" class="btn btn-succes" style="font-family: bebas_neueregular; font-size: 3rem; color: #F15A24">SOLLICITEER DIRECT</i></button>
                 
                 {% elseif is_granted('ROLE_EMPLOYER') and app.user == vacancy.user %}
-                    <button type="submit" id="_submit" name="_submit" class="btn btn-succes" style="font-family: bebas_neueregular; font-size: 3rem; color: #F15A24">Edit Vacancy</i></button>
+                    <br><button type="submit" id="_submit" name="_submit" class="btn btn-succes" style="font-family: bebas_neueregular; font-size: 3rem; color: #F15A24">Edit Vacancy</i></button>
 
                 {% else %}
                     {# Dit zou in andere gevallen leeg blijven! #}
@@ -73,7 +73,7 @@
                     <br><span class='vacanciesstyle'>Meer Vacatures Van </span><span class='company'>{{ vacancy.user.companyname }}</span>
                 </div>
                 <div>
-                    <br><table id="table_id" class="vacanciestable">
+                    <table id="table_id" class="vacanciestable">
                         <thead>
                             <tr>
                                 <th>Datum</th>
@@ -90,7 +90,7 @@
                                 </tr> 
                             {% endfor %}
                         </tbody>
-                    </table>
+                    </table><br><br>
                  </div>
             </div>
         </div>
