--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,6 +16,7 @@
         <link rel="stylesheet" href="{{ asset('assets/css/loginregistration.css')}}">
         <link rel="stylesheet" href="{{ asset('assets/css/vacancypage.css')}}">
         <link rel="stylesheet" href="{{ asset('assets/css/myapplicationspage.css')}}">
+        <link rel="stylesheet" href="{{ asset('assets/css/profile.css')}}">
         
         {% endblock %}
     
