--- a/templates/user/applicant.html.twig
+++ b/templates/user/applicant.html.twig
@@ -1,20 +1,87 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello UserController!{% endblock %}
+{% block title %}{{ profile.lastname }}, {{ profile.firstname|first }} {% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+     <div class="grid-container grid-container-padding">
+        <div class="grid-x grid-padding-x">
+            <div class="small-2 medium-2 large-2">
+                <br><img src="{{ profile.profilepictureurl }}">
+            </div>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+            <div class="small-1 medium-1 large-1">
+            </div>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/glenn/VacIT/src/Controller/UserController.php'|file_link(0) }}">src/Controller/UserController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/glenn/VacIT/templates/user/index.html.twig'|file_link(0) }}">templates/user/index.html.twig</a></code></li>
-    </ul>
-</div>
+            <div class="small-9 medium-9 large-9"> 
+                <br><h2 style="font-family:bebas_neueregular; color: #F15A24">Profiel</h2>
+
+                <div class="grid-x grid-x-padding">
+                    <div class="small-3 medium-3 large-3"> 
+                        <label>Voornaam</label> 
+                            <span class="display">{{ profile.firstname }}</span>
+                    </div>
+
+                    <div class="small-1 medium-1 large-1">
+                    </div>
+
+                    <div class="small-8 medium-8 large-8"> 
+                        <label>Achternaam</label>
+                            <span class="display">{{ profile.lastname }}</span>
+                    </div>
+                </div>
+
+                <br><label>Email</label>
+                    <span class="display">{{ profile.email }}</span>
+
+                
+                <div class="grid-x grid-x-padding">
+                    <div class="small-3 medium-3 large-3"> 
+                        <br><label>Geboortedatum</label> 
+                           <span class="display">{{ profile.dateofbirth }}</span>
+                    </div>
+
+                    <div class="small-1 medium-1 large-1">
+                    </div>
+
+                    <div class="small-8 medium-8 large-8 inputstyle"> 
+                        <br><label>Telefoonnummer</label>
+                           <span class="display">{{ profile.phonenumber }}</span>
+                    </div>
+                </div>
+
+                <br><label>Adres</label>
+                    <span class="display">{{ profile.Address }}</span>
+
+                
+                <br><div class="grid-x grid-x-padding">
+                    <div class="small-3 medium-3 large-3"> 
+                        <br><label>Postcode</label> 
+                            <span class="display">{{ profile.zipcode }}</span>
+                    </div>
+
+                    <div class="small-1 medium-1 large-1">
+                    </div>
+
+                    <div class="small-8 medium-8 large-8 inputstyle"> 
+                        <br><label>Woonplaats</label>
+                            <span class="display">{{ profile.city }}</span>
+                    </div>
+                </div>
+
+            <br><h2 style="font-family:bebas_neueregular; color: #F15A24">Motivatie</h2>
+            <span class="motivation">{{ profile.description}}</span><br><br><br>
+
+            {# <br><div class="grid-x grid-x-padding">
+                    <div class="small-6 medium-6 large-6"> 
+                        Hier komt het pdf symbool + bestandsnaam!
+                    </div>
+
+                    <div class="small-6 medium-6 large-6"> 
+                        <br><span><button type="submit" id="_submit" name="_submit" class="btn btn-succes, right" style="font-family: bebas_neueregular; font-size: 3rem; color: #F15A24">Opslaan</i></button>
+                        <button type="submit" id="_submit" name="_submit" class="btn btn-succes; right" style="font-size: 3rem; color: #F15A24; "><i class="fas fa-arrow-right"></i></button></span>
+                    </div>
+                </div> #}
+            </div>
+        </div>
+    </div>
 {% endblock %}
