--- a/templates/user/employer.html.twig
+++ b/templates/user/employer.html.twig
@@ -1,20 +1,62 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello UserController!{% endblock %}
+{% block title %}{{ profile.companyname }}{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <div class="grid-container grid-container-padding">
+        <div class="grid-x grid-padding-x">
+            <div class="small-2 medium-2 large-2">
+                <br><img src="{{ profile.profilepictureurl }}">
+            </div>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+            <div class="small-1 medium-1 large-1">
+            </div>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/glenn/VacIT/src/Controller/UserController.php'|file_link(0) }}">src/Controller/UserController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/glenn/VacIT/templates/user/index.html.twig'|file_link(0) }}">templates/user/index.html.twig</a></code></li>
-    </ul>
-</div>
+            <div class="small-9 medium-9 large-9"> 
+                <br><h2 style="font-family:bebas_neueregular; color: #F15A24">Profiel</h2>
+
+                <label>Company Name</label> 
+                <span class="display">{{ profile.companyname }}</span><br>
+
+                <br><label>Contactperson</label> 
+                <span class="display">{{ profile.firstname }} {{ profile.lastname }}</span><br>
+                
+                <br><label>Email</label> 
+                <span class="display">{{ profile.email }}</span><br>
+
+                <div class="grid-x grid-x-padding">
+                    <div class="small-3 medium-3 large-3"> 
+                        <br><label>Adres</label> 
+                            <span class="display">{{ profile.address }}</span>
+                    </div>
+
+                    <div class="small-1 medium-1 large-1">
+                    </div>
+
+                    <div class="small-8 medium-8 large-8"> 
+                        <br><label>Telefoonnummer</label>
+                            <span class="display">{{ profile.phonenumber }}</span>
+                    </div>
+                </div>
+
+                <div class="grid-x grid-x-padding">
+                    <div class="small-3 medium-3 large-3"> 
+                        <br><label>Postcode</label> 
+                            <span class="display">{{ profile.zipcode }}</span>
+                    </div>
+
+                    <div class="small-1 medium-1 large-1">
+                    </div>
+
+                    <div class="small-8 medium-8 large-8"> 
+                        <br><label>Plaats</label>
+                            <span class="display">{{ profile.city }}</span>
+                    </div>
+                </div>
+
+                <br><h2 style="font-family:bebas_neueregular; color: #F15A24">Motivatie</h2>
+                <span class="motivation">{{ profile.description }}</span><br><br><br>
+            </div>
+        </div>
+    </div>
 {% endblock %}
