--- a/templates/user/applicant.html.twig
+++ b/templates/user/applicant.html.twig
@@ -50,7 +50,7 @@
                 </div>
 
                 <br><label>Adres</label>
-                    <span class="display">{{ profile.Address }}</span>
+                    <span class="display">{{ profile.address }}</span>
 
                 
                 <br><div class="grid-x grid-x-padding">
