--- a/public/assets/css/profile.css
+++ b/public/assets/css/profile.css
@@ -25,3 +25,23 @@
 
 }
 
+.profile-edit input{
+    width: 525px;
+    font-family: 'robotocondensed';
+    font-size: 32px;
+    box-shadow: none;
+    border: none;
+    border-bottom : 2px solid #F15A24;
+}
+
+.richtext {
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: italic;
+    color: grey;
+}
+
+.inputtext{
+    font-family: 'robotocondensed';
+    font-size: 32px;
+}
+
