--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,6 +17,8 @@
         <link rel="stylesheet" href="{{ asset('assets/css/vacancypage.css')}}">
         <link rel="stylesheet" href="{{ asset('assets/css/myapplicationspage.css')}}">
         <link rel="stylesheet" href="{{ asset('assets/css/profile.css')}}">
+        <link rel="stylesheet" href="{{ asset('assets/css/althomepage.css')}}">
+        <link rel="stylesheet" href="{{ asset('assets/css/homepage.css')}}">
         
         {% endblock %}
     
@@ -24,7 +26,7 @@
         <script src="{{ asset('assets/js/foundation.js')}}"></script>
         <script src="{{ asset('assets/js/vendor.js')}}"></script>
         <script src="{{ asset('assets/js/all.js')}}"></script>
-        <script src="{{ asset('assets/js/jquery.richtext.min.js')}}"></script>
+        <script src="{{ asset('assets/js/jquery.richtext.js')}}"></script>
         <script type="text/javascript" src="https://cdn.datatables.net/v/zf/dt-1.10.21/datatables.min.js"></script>
         <script>$(document).ready(function(){$('#table_id').DataTable(
             {
